# devcontainer-ci-template

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
