[tool.poetry]
name = "devcontainer-cicd-template"
version = "0.1.0"
description = ""
authors = ["TonyLin <chiacheng.lin0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
